--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,7 +4,7 @@ body{
     margin: 0px;
 }
 .menu-panel {
-    background-color: #282829;
+    background-color: #3D3E40;
     height: 40px;
     border-bottom: 1px solid black;
 }
@@ -33,6 +33,14 @@ body{
     float: right;
     margin-top: 5px;
 }
+.notes-list{
+    padding: 0px!important;
+}
+.notes{
+    padding: 10px 0 0 20px;
+    min-height: 90px;
+    cursor: pointer;
+}
 .notes-content{
     padding: 0px!important;
     height: calc(100% - 25px);
@@ -52,4 +60,7 @@ body{
     background-color: #282829;
     border: none;
     resize:none;
+}
+.action-icon {
+    cursor: pointer;
 }
