--- a/app/components/container-component/container-component.html
+++ b/app/components/container-component/container-component.html
@@ -10,12 +10,12 @@
   <div class="col-xs-9 right-panel">
     <div class="col-xs-12 button-panel">
         <span>{{$ctrl.displayDate}}</span>
-        <div style="float:right;">
-          <button style="margin-right: 10px;color:black;" ng-click="$ctrl.saveState()">save</button>
+        <div class="button-div">
+          <button class="save-button" ng-click="$ctrl.saveState()">save</button>
           <i class="action-icon fa fa-trash-o" ng-click="$ctrl.removeNote()"></i>
         </div>
     </div>
     <div class="col-xs-12 notes-content">
-      <right-panel content="$ctrl.selectedNote"></right-panel>
+      <right-panel content="$ctrl.selectedNote" modified-content="$ctrl.updateContent(updatedContent)"></right-panel>
     </div>
 </div>
